--- a/src/app/pages/main/payment-card/payment-card.component.sass
+++ b/src/app/pages/main/payment-card/payment-card.component.sass
@@ -15,10 +15,13 @@
     .img
         img
             max-width: 100%
+            height: auto
 
     .title
         font-weight: bold
-        font-size: 1.2rem
+        font-size: larger, smaller
+        text-align: center
+
 
 .card:hover
     border: 2px solid
