--- a/src/app/pages/main/header/header.component.html
+++ b/src/app/pages/main/header/header.component.html
@@ -2,9 +2,10 @@
     <div class="container">
         <div class="search">
             <input type="text" placeholder="    search...">
-            <fa-icon [icon]="faSearch"></fa-icon>
+            <fa-icon [icon]="faSearch" class="kart"></fa-icon>
         </div>
         <div class="buttons">
+            <fa-icon [icon]="faBars" (click)="showContent()" class="selec"></fa-icon>
             <a href="#">Home</a>
             <a href="#">Login</a>
             <button>Create account</button>
