add ng-img-slider module

--- a/src/app/pages/main/banner/banner.component.html
+++ b/src/app/pages/main/banner/banner.component.html
@@ -1,3 +1,4 @@
-<div class="banner">
-    <img src="assets/banner.png" alt="">
-</div>
+
+<ng-image-slider [images]="imageObject" [infinite]="true" [autoSlide]="2" [imageSize]="style" [animationSpeed]="5"
+    slideImage="1">
+</ng-image-slider>
