--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -10,6 +10,17 @@
         <app-card-items></app-card-items>
         <app-card-items></app-card-items>
         <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
+        <app-card-items></app-card-items>
     </div>
 
 </div>
