--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -8,7 +8,7 @@
     border: 2px solid transparent
     // border-image-source: linear-gradient( #E84545, #FFF)
     // border-image-slice: 1
-    // transition: all ease 0.5s
+    transition: all ease 0.5s
 
 
     .img
