--- a/src/app/pages/main/header/header.component.sass
+++ b/src/app/pages/main/header/header.component.sass
@@ -4,13 +4,16 @@ header
     height: 3.125rem
     width: 100%
     margin: 0 auto
+    border-bottom: 2px #E84545 solid
 
+    
     .container
         width: 75%
         margin: 0 auto
         display: flex
         justify-content: space-between
         align-items: center
+
     .search 
         display: flex
         align-items: center
