--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -30,10 +30,12 @@
 
         .title
             display: flex
-            h4
+            justify-content: space-around
+            h5
                 margin: 0
                 color: #FFF
                 padding: 5px
+
 
             span
                 color: #4fe28c
@@ -48,6 +50,7 @@
             color: #FFF
             font-weight: bold
             width: 100%
+
         button:hover
             color: #4fe28c
             width: 100%
