--- a/src/app/pages/main/payment-card/payment-card.component.html
+++ b/src/app/pages/main/payment-card/payment-card.component.html
@@ -1,9 +1,8 @@
 <div class="card">
     <div class="img">
-        <img src="assets/car.png" alt="">
+        <img src="{{ item.url }}" alt="">
     </div>
     <div class="title">
-        Pay with interest-free
-        credit card
+       {{ item.text }}
     </div>
 </div>
