--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,6 +8,14 @@
         <app-card-items *ngFor="let item of data" [item]="item"></app-card-items>
     </div>
 
+    <div class="paginator">
+        <fa-icon [icon]="faArrowLeft"></fa-icon>
+        <div class="pag">1</div>
+        <div class="pag">2</div>
+        <div class="pag">3</div>
+        <fa-icon [icon]="faArrowRight"></fa-icon>
+    </div>
+
 </div>
 
 
