--- a/src/app/pages/main/main.component.sass
+++ b/src/app/pages/main/main.component.sass
@@ -4,6 +4,7 @@
     width: 75%
     margin: 0 auto
     margin-top: 5%
+    justify-content: center
     .grid
         display: grid
         width: 60%
@@ -11,7 +12,6 @@
         grid-template-columns: 1fr 1fr 1fr
         grid-auto-rows: 255px
         justify-items: center
-
         gap: 10px
         margin-top: 10%
 
@@ -48,6 +48,7 @@
             cursor: pointer    
             background-color: #E84545
             color: #FFF
+            
         
 
 
