--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,4 @@
-
-
+<app-banner></app-banner>
 <div class="section">
     <app-side-selection></app-side-selection>
     <h5>A total of {{ data.length}} products were found...</h5>
