--- a/src/app/pages/login/login.component.sass
+++ b/src/app/pages/login/login.component.sass
@@ -1,22 +1,160 @@
 .container
     display: flex
-    width: 75%
+    height: 50vh
+    width: 100%
     margin: 0 auto
     justify-content: center
-    
+    margin-top: 10%
+
     .box
         display: flex
         justify-content: space-between
         width: 50%
-        height: 200px
-        background-color: red   
+        height: 100%
+        background-color: red
+        box-shadow: 3px 3px 5px #b6b6b6
+
 
         .login
+            display: flex
+            flex-direction: column
             width: 40%
             height: 100%
-            background-color: black
+            background-color: #2B2E4A
+            text-align: center
+            justify-content: center
+            align-items: center
+
+            .title
+                font-size: larger,larger, smaller
+
+            .title , span
+                color: #FFF
+                font-weight: bold
+                
+
+            span
+                color: #9DDFD3   
+                font-size: smaller 
+                margin-bottom: 5%
+
+            .email , .password
+                
+                width: 100%
+                position: relative
+
+                fa-icon
+                    position: absolute
+                    right: 20%
+                    bottom: 20%
+                    color: #6b6b6b
+
+                input
+                    width: 70%
+                    border-radius: 20px
+                    border: none
+                    padding: 5px
+                    margin: 1%
+
+                 
+
+            .actions
+                display: flex
+                margin-top: 3%
+                justify-content: space-around
+                align-items: center
+                width: 70%
+                a
+                    color: #fff
+                    font-size: smaller
+                    text-decoration: none
+
+                button
+                    color: #FFF
+                    background: linear-gradient(#E84545, #903749)
+                    border: none
+                    border-radius: 20px
+                    padding: 5px 20px
+                    box-shadow: 1px 2px 5px #272727
+
+
+
+            .social-auth
+                display: flex
+                width: 30%
+                margin: 0 auto
+                margin-top: 3%
+                justify-content: space-around
+                align-items: center
+                img
+                    max-width: 100%
+                    
 
         .create-account
+            display: flex
+            flex-direction: column
             width: 60%
             height: 100%
-            background-color: blue  
+            background-color: #FFF
+            justify-content: center
+            align-items: center
+
+            .title
+                font-size: large
+                font-weight: bold
+
+            span
+                color: #9DDFD3 
+
+
+            .email , .password
+                    display: flex
+                    justify-content: center
+                    width: 100%
+                    position: relative
+
+                    fa-icon
+                        position: absolute
+                        right: 20%
+                        bottom: 20%
+                        color: #6b6b6b
+
+                    input
+                        width: 70%
+                        border-radius: 20px
+                        border: none
+                        padding: 5px
+                        margin: 1%
+                        background-color: #E8EAF2
+            
+        .button
+            display: flex
+            width: 70%
+            justify-content: flex-end
+
+            button
+                color: #FFF
+                background: linear-gradient(#E84545, #903749)
+                border: none
+                border-radius: 20px
+                padding: 5px 20px
+                box-shadow: 1px 2px 5px #272727
+
+
+@media( max-width:1000px )
+    .container 
+        .box
+            width: 70%
+
+@media( max-width:650px )
+    .container 
+        .box
+            width: 90%
+
+@media( max-width:500px )
+    .container 
+        .box
+            width: 90%
+            font-size: smaller
+
+                       
