--- a/src/app/pages/main/header/header.component.html
+++ b/src/app/pages/main/header/header.component.html
@@ -8,7 +8,7 @@
             <a [routerLink]="['/']">Home</a>
             <a [routerLink]="['/login']">Login</a>
             <button (click)="createPage()" >Create account</button>
-            <a href="#">
+            <a [routerLink]="['/cart']">
                 <fa-icon [icon]="faShoppingCart"></fa-icon>
             </a>
         </div>
