--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,4 +1,4 @@
 <div class="container">
    <app-empty *ngIf="items.length == 0"></app-empty>
-    
+    <app-cart-item *ngFor="let item of items" [item]="item"></app-cart-item>
 </div>
