--- a/src/app/pages/cart/cart.component.sass
+++ b/src/app/pages/cart/cart.component.sass
@@ -1,7 +1,7 @@
 .container
     display: flex
+    flex-direction: column
     justify-content: center
     align-items: center
-    background-color: #FFF
+    background-color: #E8EAF2
     width: 100%
-    height: 100vh
