--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -20,7 +20,7 @@
     .content
         display: flex
         flex-direction: column
-        background: linear-gradient(#E84545, #903749)
+        background-color: #E84545
         height: 35px
         width: 100%
         position: absolute
@@ -31,10 +31,11 @@
         .title
             display: flex
             justify-content: space-around
+            padding: 5px
             h5
                 margin: 0
                 color: #FFF
-                padding: 5px
+                padding: 0
 
 
             span
@@ -43,13 +44,15 @@
                 font-size: 13px
 
 
+
         button
-            background-color: #2B2E4A
+            background-color: #E84545
             border: none
             border-radius: 0 0 5px 5px
             color: #FFF
             font-weight: bold
             width: 100%
+            padding: 0
 
         button:hover
             color: #4fe28c
