changes in cards layout at home page, have bugs with size of card

--- a/src/app/pages/cart/cart-item/cart-item.component.html
+++ b/src/app/pages/cart/cart-item/cart-item.component.html
@@ -5,5 +5,6 @@
     <div class="content">
         <div class="title"> {{ item.name }} </div>
         <div class="price"> {{ item.price | currency: 'BRL' }} </div>
+        <fa-icon [icon]="faTrash"></fa-icon>
     </div>
 </div>
