--- a/src/app/pages/cart/cart-item/cart-item.component.sass
+++ b/src/app/pages/cart/cart-item/cart-item.component.sass
@@ -10,6 +10,7 @@
     background-color: #FFF
     transition: all ease 0.5s
 
+
     .img
         height: 80px
         width: 200px
@@ -32,6 +33,9 @@
 
         .price
             font-size: medium
+
+        fa-icon
+            color: #E84545
 
 .container:hover 
     transform: translateX(15px)
