--- a/src/app/pages/main/card-items/card-items.component.html
+++ b/src/app/pages/main/card-items/card-items.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="img">
         <img src="{{ item.url }}" alt="">
+        <fa-icon [icon]="faSearchPlus"></fa-icon>
     </div>
     <div class="content">
        <div class="title">
