--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -2,21 +2,33 @@
     display: flex
     background-color: #FFF
     height: 235px
-    max-width: 90%
-    min-width: 12.5rem
     position: relative
-    border: 2px solid transparent
-    // border-image-source: linear-gradient( #E84545, #FFF)
-    // border-image-slice: 1
     transition: all ease 0.5s
 
 
     .img
         width: 100%
+        position: relative
         img
             width: 100%
             height: 100%
-            object-fit: cover
+            object-fit: scale-down
+
+
+        fa-icon
+            position: absolute
+            left: 40%
+            bottom: 45%
+            color: #E84545
+            font-size: 50px
+            display: none
+    
+    .img:hover
+
+        filter: opacity(30%)
+        fa-icon
+            display: block
+
     .content
         display: flex
         flex-direction: column
@@ -61,7 +73,4 @@
 
 
 .card:hover
-    border: 2px solid
-    border-image-source: linear-gradient( #E84545, #FFF)
-    border-image-slice: 1
     transform: translateY(-5px)
