--- a/src/app/pages/cart/cart-item/cart-item.component.sass
+++ b/src/app/pages/cart/cart-item/cart-item.component.sass
@@ -37,7 +37,15 @@
         fa-icon
             color: #E84545
 
+    .amount
+        display: flex
+        padding: 5px
+        justify-content: center
+        align-items: center
 
+        fa-icon
+            color: #615d5d
+            padding: 5px
 
 .container:hover 
     transform: translateX(15px)
