--- a/src/app/pages/main/card-items/card-items.component.html
+++ b/src/app/pages/main/card-items/card-items.component.html
@@ -9,7 +9,7 @@
         <span>{{ item.price | currency: 'BRL' }}</span>
        </div>
         <button (click)="addToCart()">
-            Add to {{ item.id }}
+            Add to
             <fa-icon [icon]="faShoppingCart"></fa-icon>
         </button>
     </div>
