--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,5 +1,6 @@
 <div class="container">
    <app-empty *ngIf="items.length == 0"></app-empty>
     <app-cart-item *ngFor="let item of items" [item]="item"></app-cart-item>
-    <app-total *ngIf="items.length != 0"></app-total>
+    <app-total *ngIf="items.length != 0" [items]="items"></app-total>
+    <button (click)="remove()">remove</button>
 </div>
