--- a/src/app/pages/cart/total/total.component.html
+++ b/src/app/pages/cart/total/total.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <div class="title">Total itens: {{ items.length }}</div>
+    <div class="title">Total items: {{ items.length }}</div>
     <div class="total">{{ total | currency: 'BRL'}}</div>
 </div>
