--- a/src/app/pages/cart/total/total.component.sass
+++ b/src/app/pages/cart/total/total.component.sass
@@ -3,7 +3,7 @@
     flex-direction: column
     justify-content: flex-start
     align-items: center
-    width: 600px
+    min-width: 200px
     border: none
     border-radius: 5px
     box-shadow: 2px 2px 5px #6d6d6d
