--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -65,6 +65,7 @@
             font-weight: bold
             width: 100%
             padding: 0
+            cursor: pointer
 
         button:hover
             color: #4fe28c
