--- a/src/app/pages/main/header/header.component.sass
+++ b/src/app/pages/main/header/header.component.sass
@@ -6,6 +6,8 @@ header
     margin: 0 auto
     border-bottom: 2px #E84545 solid
 
+    .drop-content
+        display: none
     
     .container
         width: 75%
@@ -84,9 +86,57 @@ header
     header
         .container
             .buttons
-                fa-icon
-                    display: inline
                 a
                     display: none
                 button
                     display: none
+
+                .selec
+                    display: inline
+                    position: relative
+                    cursor: pointer
+
+                .selec:hover
+                     color: #4fe28c    
+
+
+
+        .drop-content
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-content: center
+            align-items: center
+            position: absolute
+            background-color: #2B2E4A
+            top: 6%
+            right: 0
+            z-index: 1
+            border-radius: 5px
+            transition: all ease 0.5s
+
+            a
+                width: 100%
+                text-decoration: none
+                text-align: center
+                color: #FFF
+                font-size: larger
+                font-weight: bold
+                margin: 5px
+
+            a:hover
+                color: #4fe28c
+
+            button
+                background: linear-gradient(#E84545, #903749)
+                color: #FFF    
+                box-shadow: 1px 2px 5px #221e1f
+                transition: all ease 0.5s
+                border: none
+                border-radius: 5px
+                padding: 5px
+                margin: 5px
+
+            button:hover
+                color: gold
+                transform: translateY(-2px)
