changes in footer

--- a/src/app/pages/main/footer/footer.component.sass
+++ b/src/app/pages/main/footer/footer.component.sass
@@ -8,3 +8,28 @@
     box-shadow: 0px -2px 2px #1c1d29
     position: fixed
     bottom: 0
+
+    .content
+        display: none
+        justify-content: center
+        align-items: center
+        width: 75%
+        margin: 0 auto
+
+        a
+            color: #fff
+            text-decoration: none
+            font-weight: bold
+            padding: 10px
+
+            fa-icon
+                border-radius: 5px
+                padding: 10px 20px
+                background: linear-gradient(#E84545, #903749)
+
+
+
+@media( max-width: 520px )
+    .container
+        .content
+            display: flex
