--- a/src/app/pages/main/footer/footer.component.html
+++ b/src/app/pages/main/footer/footer.component.html
@@ -1,5 +1,9 @@
 <div class="container">
     <div class="content">
-        <h5>Copyright © 1999-2021 Lorem  Ltda.</h5>
+        <a [routerLink]="['']">Home</a>
+        <a [routerLink]="['login']">Login</a>
+        <a [routerLink]="['cart']">
+            <fa-icon [icon]="faShoppingCart"></fa-icon>
+        </a>
     </div>
 </div>
