--- a/src/app/pages/main/header/header.component.sass
+++ b/src/app/pages/main/header/header.component.sass
@@ -6,8 +6,6 @@ header
     margin: 0 auto
     border-bottom: 2px #E84545 solid
 
-    .drop-content
-        display: none
     
     .container
         width: 75%
@@ -20,7 +18,7 @@ header
         display: flex
         align-items: center
         position: relative
-        min-width: 30%
+        min-width: 50%
         height: 100%
         fa-icon
             color: #a1a0a0
@@ -82,61 +80,18 @@ header
 
 
 
-@media( max-width: 992px )
+@media( max-width: 520px )
     header
         .container
+            .search
+                width: 80%
+
             .buttons
                 a
                     display: none
                 button
                     display: none
 
-                .selec
-                    display: inline
-                    position: relative
-                    cursor: pointer
-
-                .selec:hover
-                     color: #4fe28c    
 
 
-
-        .drop-content
-            display: flex
-            flex-direction: column
-            justify-content: center
-            align-content: center
-            align-items: center
-            position: absolute
-            background-color: #2B2E4A
-            top: 6%
-            right: 0
-            z-index: 1
-            border-radius: 5px
-            transition: all ease 0.5s
-
-            a
-                width: 100%
-                text-decoration: none
-                text-align: center
-                color: #FFF
-                font-size: larger
-                font-weight: bold
-                margin: 5px
-
-            a:hover
-                color: #4fe28c
-
-            button
-                background: linear-gradient(#E84545, #903749)
-                color: #FFF    
-                box-shadow: 1px 2px 5px #221e1f
-                transition: all ease 0.5s
-                border: none
-                border-radius: 5px
-                padding: 5px
-                margin: 5px
-
-            button:hover
-                color: gold
-                transform: translateY(-2px)
+     
