implements categories search

--- a/src/app/pages/main/side-selection/side-selection.component.sass
+++ b/src/app/pages/main/side-selection/side-selection.component.sass
@@ -27,6 +27,10 @@
             font-weight: bold
             transition: all ease 0.5s
 
+            a
+                text-decoration: none
+                color: #000
+
 .item:hover
     transform: translateY(-10%)
     color: #4fe28c
