--- a/src/app/pages/main/side-selection/side-selection.component.html
+++ b/src/app/pages/main/side-selection/side-selection.component.html
@@ -2,10 +2,15 @@
     <div class="title">Categories</div>
     <div class="items-list">
         <div class="item">
-            <input type="checkbox" name="" id="">
-            <span>Smartphone</span>
+            <a [routerLink]="['/offers']">Offers</a>
         </div>
         <div class="item">
+            <a [routerLink]="['/smartphones']">Smartphones</a>
+        </div>
+        <div class="item">
+            <a [routerLink]="['/mouses']">Mouses</a>
+        </div>
+        <!-- <div class="item">
             <input type="checkbox" name="" id="">
             <span>Computer</span>
         </div>
@@ -20,7 +25,7 @@
         <div class="item">
             <input type="checkbox" name="" id="">
             <span>Notebook</span>
-        </div>
+        </div> -->
         
 
     </div>
