fixes in card layouts

--- a/src/app/pages/main/card-items/card-items.component.sass
+++ b/src/app/pages/main/card-items/card-items.component.sass
@@ -43,7 +43,7 @@
         .title
             display: flex
             justify-content: space-around
-            padding: 5px
+            padding: 0
             h5
                 margin: 0
                 color: #FFF
@@ -75,3 +75,7 @@
 
 .card:hover
     transform: translateY(-5px)
+
+
+
+ 
