--- a/src/app/pages/main/mouses/mouses.component.sass
+++ b/src/app/pages/main/mouses/mouses.component.sass
@@ -7,3 +7,15 @@
     justify-items: center
     gap: 10px
     margin-top: 10%
+
+
+@media ( max-width: 1320px )
+
+    .grid
+        display: grid
+        grid-template-columns: 1fr 1fr
+
+@media ( max-width: 620px )
+    .grid
+        display: grid
+        grid-template-columns: 1fr    
