--- a/src/app/pages/main/offers/offers.component.html
+++ b/src/app/pages/main/offers/offers.component.html
@@ -1,3 +1,4 @@
+<h4>We found a total of {{ items.length }} items</h4>
 <div class="grid">
     <app-card-items *ngFor="let item of items" [item]="item"></app-card-items>
 </div>
