changes in header links

--- a/src/app/pages/main/header/header.component.sass
+++ b/src/app/pages/main/header/header.component.sass
@@ -46,6 +46,7 @@ header
             margin: 1rem
             font-weight: bold
             transition: all ease 0.5s
+
             fa-icon
                 font-size: 1.5rem
                 color: #FFF
@@ -55,7 +56,9 @@ header
 
         a:hover
             transform: translateY(-2px)
-            color: #4fe28c
+            background: linear-gradient(#E84545, #903749)
+            padding: 5px
+            border-radius: 5px
 
 
         button
