responsive changes in login component

--- a/src/app/pages/login/login.component.sass
+++ b/src/app/pages/login/login.component.sass
@@ -10,7 +10,7 @@
         display: flex
         justify-content: space-between
         width: 50%
-        height: 50%
+        height: 50vh
         background-color: red
         box-shadow: 3px 3px 5px #b6b6b6
         
@@ -154,7 +154,19 @@
 @media( max-width:500px )
     .container 
         .box
+            flex-direction: column
+            height: 80vh
             width: 90%
             font-size: smaller
+
+            .login
+                width: 100%
+               
+
+
+            .create-account
+                width: 100%
+
+
 
                        
