Add changes in router home

--- a/src/app/pages/main/header/header.component.html
+++ b/src/app/pages/main/header/header.component.html
@@ -5,7 +5,7 @@
             <fa-icon [icon]="faSearch" class="kart"></fa-icon>
         </div>
         <div class="buttons">
-            <a [routerLink]="['/']">
+            <a [routerLink]="['/offers']">
                 <fa-icon [icon]="faHome"></fa-icon>
                 Home
             </a>
