--- a/src/app/pages/main/footer/footer.component.html
+++ b/src/app/pages/main/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="content">
-        <a [routerLink]="['']">
+        <a [routerLink]="['/offers']">
             <fa-icon [icon]="faHome"></fa-icon>
         </a>
         <a [routerLink]="['login']">
