--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="actions">
                 <a href="#">Forget password?</a>
-                <button>
+                <button (click)="login()">
                     <fa-icon [icon]="faChevronRight"></fa-icon>
                 </button>
             </div>
