Add active class to routerlink

--- a/src/app/pages/main/footer/footer.component.html
+++ b/src/app/pages/main/footer/footer.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="content">
-        <a [routerLink]="['/offers']">
+        <a [routerLink]="['/offers']" routerLinkActive="active" >
             <fa-icon [icon]="faHome"></fa-icon>
         </a>
-        <a [routerLink]="['login']">
+        <a [routerLink]="['login']" routerLinkActive="active" >
             <fa-icon [icon]="faUser"></fa-icon>
         </a>
-        <a [routerLink]="['cart']">
+        <a [routerLink]="['cart']" routerLinkActive="active" >
             <fa-icon [icon]="faShoppingCart"></fa-icon>
         </a>
     </div>
