--- a/src/app/pages/main/side-selection/side-selection.component.html
+++ b/src/app/pages/main/side-selection/side-selection.component.html
@@ -2,13 +2,13 @@
     <div class="title">Categories</div>
     <div class="items-list">
         <div class="item">
-            <a [routerLink]="['/offers']">Offers</a>
+            <a [routerLink]="['/offers']" routerLinkActive="active">Offers</a>
         </div>
         <div class="item">
-            <a [routerLink]="['/smartphones']">Smartphones</a>
+            <a [routerLink]="['/smartphones']" routerLinkActive="active" >Smartphones</a>
         </div>
         <div class="item">
-            <a [routerLink]="['/mouses']">Mouses</a>
+            <a [routerLink]="['/mouses']" routerLinkActive="active" >Mouses</a>
         </div>
     </div>
 </div>
