--- a/src/app/pages/main/side-selection/side-selection.component.sass
+++ b/src/app/pages/main/side-selection/side-selection.component.sass
@@ -31,6 +31,12 @@
                 text-decoration: none
                 color: #000
 
+            .active
+                color: #4fe28c
+                border: 1px solid #4fe28c
+                padding: 2px
+                
+
 .item:hover
     transform: translateY(-10%)
     color: #4fe28c
