--- a/src/app/pages/main/footer/footer.component.sass
+++ b/src/app/pages/main/footer/footer.component.sass
@@ -25,7 +25,7 @@
             fa-icon
                 border-radius: 5px
                 padding: 10px 20px
-                background: linear-gradient(#E84545, #903749)
+
 
 
 
@@ -33,3 +33,8 @@
     .container
         .content
             display: flex
+
+        .active
+            background: linear-gradient(#E84545, #903749)
+            border-radius: 5px
+            padding: 10px 20px
