--- a/src/app/pages/main/header/header.component.sass
+++ b/src/app/pages/main/header/header.component.sass
@@ -14,6 +14,7 @@ header
         justify-content: space-between
         align-items: center
 
+
     .search 
         display: flex
         align-items: center
@@ -59,6 +60,11 @@ header
             padding: 5px
             border-radius: 5px
 
+
+        .active
+            background: linear-gradient(#E84545, #903749)
+            padding: 5px
+            border-radius: 5px
 
         button
             background: linear-gradient(#E84545, #903749)
